# datp-core

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  MASTER_TICKET_LOG.md  Makefile  README.md  code_review.md  importlinter.ini  noxfile.py  progress.md  pyproject.toml  sonar-project.properties
.claude/agents/: architecture_cleaner.md  architecture_guardian.md  artifact_lineage_auditor.md  auditor.md  claim_evidence_auditor.md  compatibility_blocker.md  configuration_engineer.md  data_pipeline_engineer.md  datp_protocol_guardian.md  dependency_auditor.md  experiment-engineer.md  experiment_engineer.md  federated_learning_engineer.md  graphify_assistant.md  implementation-engineer.md  implementation_engineer.md  literature_novelty_auditor.md  manuscript-editor.md  manuscript_editor.md  naming_auditor.md  orchestrator.md  report_output_auditor.md  reproducibility_auditor.md  reviewer2_red_team.md  roadmap_orchestrator.md  statistics_auditor.md  threshold_policy_engineer.md
.claude/commands/: audit.md  claim-evidence-check.md  cleanup-check.md  cleanup.md  comment-check.md  configuration-check.md  contract-gate.md  dependency-check.md  experiment.md  final-report-check.md  implement.md  lineage-provenance-check.md  manuscript.md  naming-check.md  no-backward-compatibility-check.md  post-edit-check.md  pre-edit-check.md  readme-makefile-check.md  scientific-scope-check.md  statistics-check.md  structure-check.md  test-check.md  threshold-semantics-check.md  typing-check.md  use-audit-contract.md  use-cleanup-refactor-contract.md  use-experiment-contract.md  use-implementation-contract.md  use-manuscript-contract.md  use-task-contract.md  workflow-audit-only.md  workflow-cleanup-refactor.md  workflow-experiment.md  workflow-implementation.md  workflow-manuscript.md  workflow-result-audit.md
.codescene/: code-health-rules.json
.codex/agents/: architecture_cleaner.toml  architecture_guardian.toml  artifact_lineage_auditor.toml  claim_evidence_auditor.toml  compatibility_blocker.toml  configuration_engineer.toml  data_pipeline_engineer.toml  datp_protocol_guardian.toml  dependency_auditor.toml  experiment_engineer.toml  federated_learning_engineer.toml  graphify_assistant.toml  implementation_engineer.toml  literature_novelty_auditor.toml  manuscript_editor.toml  naming_auditor.toml  report_output_auditor.toml  reproducibility_auditor.toml  reviewer2_red_team.toml  roadmap_orchestrator.toml  statistics_auditor.toml  threshold_policy_engineer.toml
.github/: copilot-instructions.md
.github/agents/: architecture-cleaner.agent.md  claim-evidence-auditor.agent.md  compatibility-blocker.agent.md  datp-protocol-guardian.agent.md  experiment-engineer.agent.md  graphify-assistant.agent.md  implementation-engineer.agent.md  literature-novelty-auditor.agent.md  manuscript-editor.agent.md  naming-auditor.agent.md  reproducibility-auditor.agent.md  reviewer2-red-team.agent.md  roadmap-orchestrator.agent.md  statistics-auditor.agent.md  threshold-policy-engineer.agent.md
.github/instructions/: datp-contracts.instructions.md  datp-hooks.instructions.md  datp-no-backward-compatibility.instructions.md  datp-workflows.instructions.md
.github/workflows/: codescene.yml  sonarqube.yml  tests.yml
.serena/: project.yml
.tmp/file_tree_refactor/: CHECKLIST.md  CURRENT_ARCHITECTURE.md  MIGRATION_MAP.md  ROADMAP_EXTRACTION.md  STATE.md  TARGET_ARCHITECTURE.md
ai/: README.md
ai/agents/: architecture_cleaner.md  architecture_guardian.md  artifact_lineage_auditor.md  auditor.md  claim_evidence_auditor.md  compatibility_blocker.md  configuration_engineer.md  data_pipeline_engineer.md  datp_protocol_guardian.md  dependency_auditor.md  experiment-engineer.md  experiment_engineer.md  federated_learning_engineer.md  graphify_assistant.md  implementation-engineer.md  implementation_engineer.md  literature_novelty_auditor.md  manuscript-editor.md  manuscript_editor.md  naming_auditor.md  orchestrator.md  report_output_auditor.md  reproducibility_auditor.md  reviewer2_red_team.md  roadmap_orchestrator.md  statistics_auditor.md  threshold_policy_engineer.md
ai/commands/: audit.md  cleanup.md  experiment.md  implement.md  manuscript.md
ai/contracts/: audit_contract.md  cleanup_refactor_contract.md  experiment_contract.md  implementation_contract.md  manuscript_contract.md  task_contract_template.md
ai/hooks/: claim_evidence_hook.md  cleanup_hook.md  comment_hook.md  configuration_hook.md  contract_gate.md  dependency_hook.md  final_report_hook.md  lineage_provenance_hook.md  naming_hook.md  no_backward_compatibility_hook.md  post_edit_hook.md  pre-completion-gate.md  pre-edit-gate.md  pre_edit_hook.md  readme_makefile_hook.md  scientific_scope_hook.md  statistics_hook.md  structure_hook.md  test_hook.md  threshold_semantics_hook.md  typing_hook.md
ai/skills/: architecture-and-dependencies.md  architecture_placement_check.md  artifact_reuse_check.md  avoid_raw_dict_defaults_check.md  batching_resource_preflight_check.md  code-hygiene.md  (+41 more)
checkpoints/: README.md
configs/: execution.yaml  experiments.yaml  protocols.yaml  runtime.yaml
data/: README.md  raw
docs/: AI Catalogue — DATP Journal Extension.md  DATP Core Architecture.md  Datpx phase0 architecture.md  Journal_Extension_Master_Roadmap.md  MASTER_TICKET_LOG.md
outputs/: README.md
results/: README.md
tests/: conftest.py  test_ciciot2023_adapter.py  test_config_characterization.py  test_core.py  test_fingerprint_golden.py  test_nbaiot_adapter.py  test_threshold_estimators_characterization.py
typings/: pynvml.pyi
(+1196 files in other folders)
