[project]
name = "datp-core"
version = "0.1.0"
description = "DATP journal-extension scratch implementation: fixed-encoder, fixed-federated-model, threshold-calibration-scope study."
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "cattrs>=23.2",
    "networkx>=3.0",
    "dagster>=1.7",
    "numpy==2.5.1",
    "pyarrow==25.0.0",
    "polars>=0.20",
    "pandera>=0.18",
    "duckdb>=0.10",
    "xarray>=2024.1",
    "pandas",
    "blake3==1.0.9",
    "msgspec==0.21.1",
    "torch==2.10.0",
    "flwr==1.32.1",
    "scikit-learn==1.9.0",
    "safetensors>=0.4",
    "scipy==1.18.0",
    "statsmodels>=0.14",
    "scikit-posthocs>=0.8",
    "pingouin>=0.5",
    "matplotlib==3.10.8",
    "deepdiff>=7.0",
    "structlog>=24.1",
    "filelock>=3.13",
]

[project.optional-dependencies]
cli = [
    "typer>=0.12",
    "rich>=13.7",
]
hardware = [
    "psutil>=5.9",
    "pynvml>=11.5",
]

[project.scripts]
datp-core = "datp_core.interfaces.cli.app:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "ICN"]

[tool.ruff.lint.per-file-ignores]
"typings/**/*.pyi" = ["N818"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"
